removed round_df

--- a/assets/differentialabundance_report.Rmd
+++ b/assets/differentialabundance_report.Rmd
@@ -339,7 +339,7 @@ differential_results <- lapply(differential_files, function(diff_file){
   # Filter tables by logFC threshold and padj threshold and save to TSV
 
   filtered_diff <- na.omit(diff[log2(params$differential_min_fold_change) <= abs(diff[[params$differential_fc_column]]) & diff[[params$differential_qval_column]] <= params$differential_max_qval,])
-  filtered_diff <- round_dataframe_columns()
+  #filtered_diff <- round_dataframe_columns()
   write.table(filtered_diff, file=file.path(params$artifact_dir, paste0(basename(tools::file_path_sans_ext(diff_file)), "_filtered.tsv")), sep="\t", quote=F, row.names=F)
 
   diff
